[package]
name = "webthing"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron = "0.42"
macros = { path = "../namesarehard/macros" }
serde = { version = "*", features = ["derive"]}
serde_json = "1.0.66"
wtf = { path = "../namesarehard/wtf", default-features = false }
strum = { version = "*", features = ["derive"] }
derive_more = "*"
itertools = "*"
web-sys = { version = "0.3.53", features = ["Document", "Element"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
debug = true
